# live-c-elegans

./: .gitignore  README.md  pyproject.toml
celegans_live_demo/: __init__.py  __main__.py  connectome_layout.py  server.py  worm_snapshot.py
lab/: __init__.py  connectome_layout.py  rest_routes.py  server.py  sim_runtime.py  wire.py  ws_routes.py
lab-web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
lab-web/src/: App.tsx  index.css  main.tsx
lab-web/src/api/: http.ts  wire.ts
lab-web/src/components/: BodyWYSIWYG.tsx  ControlsPane.tsx  MuscleInspector.tsx  MuscleMap.tsx  NeuronInspector.tsx  NeuronMap.tsx  NeuronTable.tsx  ParamControl.tsx  RightPane.tsx  SimulationTransportHud.tsx  Sparkline.tsx  StatusHud.tsx  WormCanvas.tsx  WormCanvas3D.tsx
lab-web/src/components/tabs/: AppSettingsTab.tsx  BodyTab.tsx  ConnectomePaulaGuide.tsx  ConnectomeTab.tsx  MujocoEngineTab.tsx  SimulationTab.tsx  TabShell.tsx
lab-web/src/components/ui/: GuideModal.tsx  KeyHint.tsx
lab-web/src/state/: app-settings.ts  body.ts  connectome.ts  schema.ts  shortcuts.ts  store.ts  ws.ts
lab/introspect/: __init__.py  body_introspect.py  connectome_introspect.py
lab/parameters/: __init__.py  applicators.py  body_params.py  connectome_params.py  mujoco_engine_params.py  registry.py  simulation_params.py
web/: app.js  index.html  wrangler.jsonc
