[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celegans-live-demo"
version = "0.1.0"
description = "WebSocket live viewer for C. elegans active-inference simulation"
requires-python = ">=3.11"
dependencies = [
    "active-inference",
    "websockets>=12",
]

[project.scripts]
celegans-demo-server = "celegans_live_demo.server:main"

[tool.hatch.build.targets.wheel]
packages = ["celegans_live_demo"]

[tool.uv.sources]
active-inference = { path = "../active-inference", editable = true }

[tool.uv]
required-version = ">=0.5"
