[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celegans-live-demo"
version = "0.1.0"
description = "C. elegans live viewers: WebSocket canvas demo and FastAPI/React virtual lab (lab + lab-web)"
# Match active-inference: mujoco has no cp314 wheels yet (sdist needs MUJOCO_PATH).
requires-python = ">=3.11,<3.14"
dependencies = [
    "active-inference",
    "websockets>=12",
    "fastapi>=0.136",
    "uvicorn[standard]>=0.44",
    "pydantic>=2.13",
]

[project.scripts]
celegans-demo-server = "celegans_live_demo.server:main"
celegans-lab-server = "lab.server:main"

[tool.hatch.build.targets.wheel]
packages = ["celegans_live_demo", "lab"]

[tool.uv.sources]
active-inference = { path = "../active-inference", editable = true }

[tool.uv]
required-version = ">=0.5"
